--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.4.5",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-star-rating": "^1.0.9",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.1"
   },
